tests/fail/div_one_stack.avm
push int16(1)
div
exit
